small changes to build on AIX, and other small chages to the build system
git-svn-id: svn://svn.code.sf.net/p/bluefish/code/trunk@93 7640d186-872a-4c71-b7b2-a5696852cc35

--- a/bluefish/configure.ac
+++ b/bluefish/configure.ac
@@ -112,7 +112,7 @@ dnl Checks for header files.
 dnl ************************
 
 AC_HEADER_STDC
-AC_CHECK_HEADERS(stdlib.h unistd.h string.h errno.h stdio.h sys/stat.h ctype.h getopt.h math.h time.h sys/types.h fcntl.h netdb.h netinet/in.h sys/socket.h arpa/inet.h dirent.h sys/select.h sys/time.h sys/ipc.h)
+AC_CHECK_HEADERS(stdlib.h unistd.h string.h strings.h errno.h stdio.h sys/stat.h ctype.h getopt.h math.h time.h sys/types.h fcntl.h netdb.h netinet/in.h sys/socket.h arpa/inet.h dirent.h sys/select.h sys/time.h sys/ipc.h)
 
 dnl ************************
 dnl Checks for external programs.
