--- a/bluefish/src/config.h.in
+++ b/bluefish/src/config.h.in
@@ -25,6 +25,7 @@
 
 #undef HAVE_UNISTD_H 
 #undef HAVE_STRING_H 
+#undef HAVE_STRINGS_H 
 #undef HAVE_ERRNO_H 
 #undef HAVE_STDIO_H 
 #undef HAVE_SYS_STAT_H 
@@ -69,7 +70,3 @@
 
 /* with splash screen */
 #undef NOSPLASH
-
-/* install directories */
-#undef PREFIX
-#undef PKGDATADIR
