added image.c, the <IMG> dialog, no thumbnails yet
git-svn-id: svn://svn.code.sf.net/p/bluefish/code/trunk@95 7640d186-872a-4c71-b7b2-a5696852cc35

--- a/bluefish/src/Makefile.in
+++ b/bluefish/src/Makefile.in
@@ -55,6 +55,7 @@ SRCS = 	bf_lib.c \
 			html_diag.c \
 			html_form.c \
 			html_table.c \
+			image.c \
 			menu.c \
 			msg_queue.c \
 			pixmap.c \
