--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -55,6 +55,7 @@ SRCS = 	bf_lib.c \
 			html_diag.c \
 			html_form.c \
 			html_table.c \
+			image.c \
 			menu.c \
 			msg_queue.c \
 			pixmap.c \
