a lot of work on the thumbnail dialogs, not all finished yet
git-svn-id: svn://svn.code.sf.net/p/bluefish/code/trunk@101 7640d186-872a-4c71-b7b2-a5696852cc35

--- a/bluefish/src/Makefile.in
+++ b/bluefish/src/Makefile.in
@@ -81,7 +81,7 @@ patchclean: clean
 	rm -f *.orig *.rej  
 
 distclean: patchclean
-	rm -f config.h
+	rm -f config.h Makefile
 
 install: all
 	$(INSTALL_DIR) $(bindir)
