and the last (not) bugfixes for the build system
git-svn-id: svn://svn.code.sf.net/p/bluefish/code/trunk@104 7640d186-872a-4c71-b7b2-a5696852cc35

--- a/bluefish/icons/Makefile.in
+++ b/bluefish/icons/Makefile.in
@@ -49,7 +49,7 @@ bluefish:
 
 install: all
 	$(INSTALL_DIR) $(pkgdatadir)
-	$(INSTALL_DATA) $(OBJS) $(pkgdatadir)/
+	$(INSTALL_DATA) $(OBJS) $(pkgdatadir)
 
 uninstall:
 	/bin/rm -f $(pkgdatadir)/icon_*.png
