--- a/bluefish/configure.ac
+++ b/bluefish/configure.ac
@@ -23,8 +23,8 @@ AC_CONFIG_HEADER(src/config.h)
 
 PACKAGE=bluefish
 VERSION=gtk2-port
-#AC_SUBST(PACKAGE)
-#AC_SUBST(VERSION)
+AC_SUBST(PACKAGE)
+AC_SUBST(VERSION)
 AC_DEFINE_UNQUOTED(PACKAGE, "$PACKAGE")
 AC_DEFINE_UNQUOTED(VERSION, "$VERSION")
 AC_DEFINE_UNQUOTED(CURRENT_VERSION_NAME, "$PACKAGE $VERSION HTML editor")
