--- a/Makefile.in
+++ b/Makefile.in
@@ -29,10 +29,12 @@ prefix = @prefix@
 exec_prefix = @exec_prefix@
 bindir = @bindir@
 datadir = @datadir@
-pkgdatadir = $(datadir)/@PACKAGE@
+pkgdatadir = $(datadir)/$(PACKAGE)
 pixmapsdir = @prefix@/share/pixmaps
 
 INSTALL = @INSTALL@
+INSTALL_DIR = $(INSTALL) -d -m 755 
+INSTALL_DATA = $(INSTALL) -m 644
 
 #make -C is a GNU extension, BSD make doesn't have it
 #use cd dir ; make all instead
@@ -57,7 +59,9 @@ distclean:
 
 install:
 	@cd icons/ && $(MAKE) install
+	$(INSTALL_DATA) images/bluefish_splash.png $(pkgdatadir)
 	@cd src/ && $(MAKE) install
+
 
 uninstall:
 	@cd icons/ && $(MAKE) uninstall
