a new highlighting engine based on perl compatible regular expressions, hopefully faster then the previous engine, mostly ready, except for the default patterns.
need to re-run autoconf since configure.ac is also changed (we need -lpcre)


git-svn-id: svn://svn.code.sf.net/p/bluefish/code/trunk@105 7640d186-872a-4c71-b7b2-a5696852cc35

--- a/bluefish/configure.ac
+++ b/bluefish/configure.ac
@@ -97,6 +97,8 @@ dnl ************************
 LIBS="$LIBS `pkg-config --libs gtk+-2.0`"
 CFLAGS="$CFLAGS `pkg-config --cflags gtk+-2.0`"
 
+AC_CHECK_LIB(pcre, pcre_exec, LIBS="$LIBS -lpcre")
+
 AC_CHECK_LIB(posix4, nanosleep, 
 	LIBS="$LIBS -lposix4"
 	AC_DEFINE(HAVE_NANOSLEEP),
