--- a/Makefile.in
+++ b/Makefile.in
@@ -58,6 +58,8 @@ distclean:
 	rm -f *.orig *.rej
 
 install:
+	pkgdatadir = @pkgdatadir@
+	$(INSTALL) -m 644 images/bluefish_splash.png $(pkgdatadir)
 	@cd icons/ && $(MAKE) install
 	$(INSTALL_DATA) images/bluefish_splash.png $(pkgdatadir)
 	@cd src/ && $(MAKE) install
