nanosleep is on freeBSD not in lposix and not in lrt, but it is available
git-svn-id: svn://svn.code.sf.net/p/bluefish/code/trunk@114 7640d186-872a-4c71-b7b2-a5696852cc35

--- a/bluefish/configure.ac
+++ b/bluefish/configure.ac
@@ -109,8 +109,7 @@ AC_CHECK_LIB(posix4, nanosleep,
 	AC_DEFINE(HAVE_NANOSLEEP),
 	AC_CHECK_LIB(rt, nanosleep,
 		LIBS="$LIBS -lrt"
-		AC_DEFINE(HAVE_NANOSLEEP),
-		AC_MSG_ERROR(function nanosleep not found unknown how to continue)
+		AC_DEFINE(HAVE_NANOSLEEP)
 	)
 )
 
