added a little more to the preferences dialog, and fixed a small problem in the java highlight patterns
git-svn-id: svn://svn.code.sf.net/p/bluefish/code/trunk/bluefish@120 7640d186-872a-4c71-b7b2-a5696852cc35

--- a/Makefile.in
+++ b/Makefile.in
@@ -59,7 +59,8 @@ distclean:
 
 install:
 	pkgdatadir=@pkgdatadir@
-	$(INSTALL) -m 644 images/bluefish_splash.png $(pkgdatadir)
+	$(INSTALL_DIR) $(pkgdatadir)
+	$(INSTALL_DATA) images/bluefish_splash.png $(pkgdatadir)
 	@cd icons/ && $(MAKE) install
 	$(INSTALL_DATA) images/bluefish_splash.png $(pkgdatadir)
 	@cd src/ && $(MAKE) install
