ported the wizards to the gtk2 port, and did some UI fixes for the search and replace dialog
git-svn-id: svn://svn.code.sf.net/p/bluefish/code/trunk@135 7640d186-872a-4c71-b7b2-a5696852cc35

--- a/bluefish/src/Makefile.in
+++ b/bluefish/src/Makefile.in
@@ -64,13 +64,15 @@ SRCS = 	bf_lib.c \
 			rpopup.c \
 			snr2.c \
 			stringlist.c \
-			undo_redo.c
+			undo_redo.c \
+			wizards.c
 
 OBJS = $(SRCS:.c=.o)
 
 all: bluefish
 bluefish: $(SRCS) $(OBJS)
 	$(CC) $(DEFS) -o bluefish $(OBJS) $(LDFLAGS) $(LIBS)
+	echo "The bluefish binary is succesfully created"
 
 .c.o: $(SRCS)
 	$(CC) $(DEFS) $(CFLAGS) -c -o $@ $<
