added the new icon to the application, and replaced the close image with the old one, the new one was identical to the cancel image, so that is confusing
git-svn-id: svn://svn.code.sf.net/p/bluefish/code/trunk@138 7640d186-872a-4c71-b7b2-a5696852cc35

--- a/bluefish/inline_images/Makefile
+++ b/bluefish/inline_images/Makefile
@@ -2,7 +2,7 @@ TOOLBAR = \
 	abbr abbr.png \
 	acronym acronym.png \
 	anchor anchor.png \
-	bluefish_icon bluefish_icon.png \
+	bluefish_icon1 bluefish_icon1.png \
 	body body.png \
 	bold bold.png \
 	brbreak brbreak.png \
