fixed again some compiler warnings on Solaris Studio ONE, fixed a bug in the Makefile.in in icons/ (only the first icon was installed) and added some options to the preferences.
git-svn-id: svn://svn.code.sf.net/p/bluefish/code/trunk@149 7640d186-872a-4c71-b7b2-a5696852cc35

--- a/bluefish/icons/Makefile.in
+++ b/bluefish/icons/Makefile.in
@@ -49,7 +49,9 @@ bluefish:
 
 install: all
 	$(INSTALL_DIR) $(pkgdatadir)
-	$(INSTALL_DATA) $(OBJS) $(pkgdatadir)
+	for file in $(OBJS) ; \
+		do $(INSTALL_DATA) $$file $(pkgdatadir) ; \
+	done
 
 uninstall:
 	/bin/rm -f $(pkgdatadir)/icon_*.png
