added view_in_browser to the toolbar (uses the top-most browser from the configfile), added <control>a for 'select all' shortcut, fixed a bug in thumbnail dialog (</a> was not written)
git-svn-id: svn://svn.code.sf.net/p/bluefish/code/trunk@150 7640d186-872a-4c71-b7b2-a5696852cc35

--- a/bluefish/inline_images/Makefile
+++ b/bluefish/inline_images/Makefile
@@ -124,6 +124,7 @@ TOOLBAR = \
 	undo undo.png \
 	unknown_file unknown_file.png \
 	var var.png \
+	view_in_browser view_in_browser.png \
 	wml_a wml_a.png \
 	wml_access wml_access.png \
 	wml_bold wml_bold.png \
