--- a/bluefish/configure.ac
+++ b/bluefish/configure.ac
@@ -61,7 +61,7 @@ AC_ARG_ENABLE(gcc3-optimization,
 		AC_HELP_STRING([--enable-gcc3-optimization=type],
 				[gcc3 can optimize for: i386, i486, pentium, pentium-mmx, pentiumpro, pentium2, pentium3, pentium4, k6, k6-2, k6-3, athlon, athlon-tbird, athlon-4, athlon-xp, athlon-mp, winchip-c6, winchip2, c3]),
 		if gcc -dumpversion|egrep -q "^3\..*"; then
-			CFLAGS="-O3 -march=$enableval -fomit-frame-pointer -fno-exceptions -fno-rtti -pipe -s -ffast-math -fexpensive-optimizations -floop-optimize -falign-functions -falign-loops"
+			CFLAGS="-O3 -march=$enableval -fomit-frame-pointer -fno-exceptions -fno-rtti -pipe -s -ffast-math -fexpensive-optimizations -falign-functions -falign-loops"
 			echo "using $CC $CFLAGS"
 		else
 			echo "warning: compiler is not gcc3: not optimizing!"
