added new functionality: command output parsing that can open a file or jump to a line, as example I implemented the make command (check the file menu, it has a temporary entry)
git-svn-id: svn://svn.code.sf.net/p/bluefish/code/trunk@194 7640d186-872a-4c71-b7b2-a5696852cc35

--- a/bluefish/src/Makefile.in
+++ b/bluefish/src/Makefile.in
@@ -58,6 +58,7 @@ SRCS = 	bf_lib.c \
 			image.c \
 			menu.c \
 			msg_queue.c \
+			outputbox.c \
 			pixmap.c \
 			preferences.c \
 			rcfile.c \
