--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -58,6 +58,7 @@ SRCS = 	bf_lib.c \
 			image.c \
 			menu.c \
 			msg_queue.c \
+			outputbox.c \
 			pixmap.c \
 			preferences.c \
 			rcfile.c \
