--- a/src/config.h.in
+++ b/src/config.h.in
@@ -46,6 +46,7 @@
 #undef HAVE_NL_TYPES_H
 #undef HAVE_ALLOCA_H
 #undef HAVE_SYS_IPC_H
+#undef HAVE_SYS_MSG_H
 
 /* Define if you have the ANSI C header files.  */
 #undef STDC_HEADERS
