check for msg.h by ./configure, test before using WITH_MSG_QUEUE
git-svn-id: svn://svn.code.sf.net/p/bluefish/code/trunk@217 7640d186-872a-4c71-b7b2-a5696852cc35

--- a/bluefish/src/config.h.in
+++ b/bluefish/src/config.h.in
@@ -46,6 +46,7 @@
 #undef HAVE_NL_TYPES_H
 #undef HAVE_ALLOCA_H
 #undef HAVE_SYS_IPC_H
+#undef HAVE_SYS_MSG_H
 
 /* Define if you have the ANSI C header files.  */
 #undef STDC_HEADERS
