make install didn't work on mac OSX, it does now :))
git-svn-id: svn://svn.code.sf.net/p/bluefish/code/trunk/bluefish@218 7640d186-872a-4c71-b7b2-a5696852cc35

--- a/Makefile.in
+++ b/Makefile.in
@@ -57,7 +57,7 @@ distclean:
 	rm -rf autom4te.cache/
 	rm -f *.orig *.rej
 
-install:
+install: src/bluefish
 	pkgdatadir=@pkgdatadir@
 	$(INSTALL_DIR) $(pkgdatadir)
 	$(INSTALL_DATA) images/bluefish_splash.png $(pkgdatadir)
