including an stylesheet and so on
git-svn-id: svn://svn.code.sf.net/p/bluefish/code/trunk@225 7640d186-872a-4c71-b7b2-a5696852cc35

--- a/bluefish/doc/source/Makefile
+++ b/bluefish/doc/source/Makefile
@@ -16,32 +16,31 @@ BOOK_ALL_SOURCE=${BOOK_DIR}/*.xml
 
 XSL_DIR=${TOOLS_DIR}/tools/xsl
 XSL_FO=${XSL_DIR}/fo/docbook.xsl
-XSL_HTML=${XSL_DIR}/html/docbook.xsl
+XSL_HTML=${TOOLS_DIR}/db2longhtml.xsl
+XSL_HTML_CHUNK=${TOOLS_DIR}/db2html.xsl
 
 RUN_FOP=${TOOLS_DIR}/tools/bin/run-fop.sh
 
 all: html pdf ps
 
-clean: book-clean
+html: $(BOOK_ALL_SOURCE)
+	$(XSLTPROC) $(XSL_HTML_CHUNK) $(BOOK_XML_SOURCE) > $(BOOK_HTML_TARGET)
+	mv *.html $(OUTPUT_DIR)/
 
-html: $(BOOK_HTML_TARGET)
-
-$(BOOK_HTML_TARGET): $(BOOK_ALL_SOURCE)
+html-one-big: $(BOOK_ALL_SOURCE)
 	$(XSLTPROC) $(XSL_HTML) $(BOOK_XML_SOURCE) > $(BOOK_HTML_TARGET)
 
-pdf: $(BOOK_PDF_TARGET)
-
-ps: $(BOOK_PS_TARGET)
-
-$(BOOK_PDF_TARGET): $(BOOK_ALL_SOURCE)
+pdf: $(BOOK_ALL_SOURCE)
 	$(XSLTPROC) $(XSL_FO) $(BOOK_XML_SOURCE) > $(BOOK_FO_TARGET)
 	$(RUN_FOP) $(BOOK_TOP) -fo $(BOOK_FO_TARGET) -pdf $(BOOK_PDF_TARGET)
 
-$(BOOK_PS_TARGET): $(BOOK_ALL_SOURCE)
+ps: $(BOOK_ALL_SOURCE)
 	$(XSLTPROC) $(XSL_FO) $(BOOK_XML_SOURCE) > $(BOOK_FO_TARGET)
 	$(RUN_FOP) $(BOOK_TOP) -fo $(BOOK_FO_TARGET) -ps $(BOOK_PS_TARGET)
 
-book-clean:
+clean:
 	rm -f $(BOOK_HTML_TARGET) $(BOOK_FO_TARGET)
 	rm -f $(BOOK_PDF_TARGET) $(BOOK_PS_TARGET) 
+	rm -f $(BOOK_PDF_TARGET) $(BOOK_PS_TARGET) 
+	rm -f $(OUTPUT_DIR)/*.html
 
