wrote a new Makefile.in for the po/ directory (much more simple), updated all .po files, and added code to bluefish.c from Oskar Swida <swida@aragorn.pb.bialystok.pl> to enable translation
git-svn-id: svn://svn.code.sf.net/p/bluefish/code/trunk@236 7640d186-872a-4c71-b7b2-a5696852cc35

--- a/bluefish/configure.ac
+++ b/bluefish/configure.ac
@@ -177,6 +177,7 @@ dnl *******************************
 dnl   GETTEXT
 dnl *******************************
 AM_GNU_GETTEXT
+AC_PATH_PROG(MSGMERGE, msgmerge, /usr/bin/msgmerge)
 
 if test "$GMSGFMT" = "no"; then
 	echo "no gmsgfmt - NLS disabled"
@@ -192,7 +193,7 @@ fi
 
 
 
-AC_CONFIG_FILES(Makefile icons/Makefile src/Makefile po/Makefile.in)
+AC_CONFIG_FILES(Makefile icons/Makefile src/Makefile po/Makefile)
 AC_OUTPUT
 
 echo "-----------"
