--- a/po/Makefile.in
+++ b/po/Makefile.in
@@ -37,8 +37,8 @@ all-no:
 install:
 	@for file in $(CATALOGS) ; do \
 		lang=`echo $${file} | sed -e 's/\.gmo$$//'`;\
-		$(INSTALL_DIR) $${lang}.gmo $(localedir)/$${lang}/
-		$(INSTALL_DIR) $${lang}.gmo $(localedir)/$${lang}/LC_MESSAGES/
+		$(INSTALL_DIR) $${lang}.gmo $(localedir)/$${lang}/ ;\
+		$(INSTALL_DIR) $${lang}.gmo $(localedir)/$${lang}/LC_MESSAGES/ ;\
 		$(INSTALL_DATA) $${lang}.gmo $(localedir)/$${lang}/LC_MESSAGES/${PACKAGE}.mo;\
 	done
 
