redid some of the code to set default values moved the values to files, added those files in the data/ dir parsed the files during make done for encodings, highlighting and filetypes not yet for the custom menu
git-svn-id: svn://svn.code.sf.net/p/bluefish/code/trunk@254 7640d186-872a-4c71-b7b2-a5696852cc35

--- a/bluefish/configure.ac
+++ b/bluefish/configure.ac
@@ -193,7 +193,7 @@ fi
 
 
 
-AC_CONFIG_FILES(Makefile icons/Makefile src/Makefile po/Makefile)
+AC_CONFIG_FILES(Makefile icons/Makefile src/Makefile po/Makefile data/Makefile)
 AC_OUTPUT
 
 echo "-----------"
