--- a/bluefish/Makefile.in
+++ b/bluefish/Makefile.in
@@ -43,11 +43,13 @@ bluefish:all
 all:
 	@cd src/ && $(MAKE) all
 	@cd po/ && $(MAKE) all
+	@cd data/ && $(MAKE) all
 
 clean:
 	rm -f core *~
 	@cd src/ && $(MAKE) clean
 	@cd po/ && $(MAKE) clean
+	@cd data/ && $(MAKE) clean
 
 patchclean: clean
 	rm -f *.orig *.rej
@@ -56,6 +58,7 @@ patchclean: clean
 distclean:
 	@cd src/ && $(MAKE) distclean
 	@cd po/ && $(MAKE) distclean
+	@cd data/ && $(MAKE) distclean
 	rm -f Makefile src/Makefile icons/Makefile config.status config.cache config.log
 	rm -rf autom4te.cache/
 	rm -f *.orig *.rej
@@ -68,9 +71,11 @@ install: src/bluefish
 	$(INSTALL_DATA) images/bluefish_splash.png $(pkgdatadir)
 	@cd src/ && $(MAKE) install
 	@cd po/ && $(MAKE) install
+	@cd data/ && $(MAKE) install
 
 uninstall:
 	@cd icons/ && $(MAKE) uninstall
 	@cd src/ && $(MAKE) uninstall
 	@cd po/ && $(MAKE) uninstall
+	@cd data/ && $(MAKE) uninstall
 	/bin/rmdir $(pkgdatadir)
