bug in make install
git-svn-id: svn://svn.code.sf.net/p/bluefish/code/trunk@256 7640d186-872a-4c71-b7b2-a5696852cc35

--- a/bluefish/data/Makefile.in
+++ b/bluefish/data/Makefile.in
@@ -30,7 +30,7 @@ all: $(DEFAULTFILES)
 install: all
 	$(INSTALL_DIR) $(pkgdatadir)
 	@for file in $(DEFAULTFILES) ; do \
-		$(INSTALL_PROGRAM) $$file $(pkgdatadir)/$$file ;\
+		$(INSTALL_DATA) $$file $(pkgdatadir)/$$file ;\
 	done
 
 uninstall:
