Added norwegian translation
git-svn-id: svn://svn.code.sf.net/p/bluefish/code/trunk@258 7640d186-872a-4c71-b7b2-a5696852cc35

--- a/bluefish/configure.ac
+++ b/bluefish/configure.ac
@@ -29,7 +29,7 @@ AC_DEFINE_UNQUOTED(PACKAGE, "$PACKAGE")
 AC_DEFINE_UNQUOTED(VERSION, "$VERSION")
 AC_DEFINE_UNQUOTED(CURRENT_VERSION_NAME, "$PACKAGE $VERSION HTML editor")
 
-ALL_LINGUAS="de da fr ru ro cs es el en ja it sv pt_BR hu pl nl"
+ALL_LINGUAS="de da fr ru ro cs es el en ja it sv pt_BR hu pl nl no"
 
 dnl ************************
 dnl Compiler options
