--- a/bluefish/icons/Makefile.in
+++ b/bluefish/icons/Makefile.in
@@ -32,6 +32,7 @@ gnulocaledir = $(prefix)/share/locale
 aliaspath = $(localedir):.
 
 OBJS = 	icon_c.png \
+			icon_cfml.png \
 			icon_html.png \
 			icon_java.png \
 			icon_unknown.png \
