added highlighting pattern profiling (compile time option) so people that want to optimize the highlighting patterns can get the data in the terminal
git-svn-id: svn://svn.code.sf.net/p/bluefish/code/trunk@283 7640d186-872a-4c71-b7b2-a5696852cc35

--- a/bluefish/configure.ac
+++ b/bluefish/configure.ac
@@ -139,6 +139,11 @@ AC_ARG_ENABLE(splash-screen,
    echo "Without splash screen",
 	AC_DEFINE(NOSPLASH)],)
 
+AC_ARG_WITH(highlight-profiling,
+[  --with-highlight-profiling Enables profiling information about highlighting patterns],[
+   echo "With highlighting profiling",
+AC_DEFINE(HL_PROFILING)],)
+
 dnl ************************
 dnl Checks for librarries
 dnl ************************
