moved all special characters from the 'en' locale to menu.c, since gtk2 uses UTF-8 we can have those characters in the code now!!
en.po can be removed soon


git-svn-id: svn://svn.code.sf.net/p/bluefish/code/trunk@292 7640d186-872a-4c71-b7b2-a5696852cc35

--- a/bluefish/po/Makefile.in
+++ b/bluefish/po/Makefile.in
@@ -24,7 +24,8 @@ MSGFMT = @MSGFMT@
 XGETTEXT = @XGETTEXT@
 MSGMERGE = @MSGMERGE@
 
-CATALOGS = de.gmo da.gmo fr.gmo ro.gmo cs.gmo es.gmo el.gmo en.gmo ja.gmo it.gmo sv.gmo pt_BR.gmo hu.gmo pl.gmo nl.gmo no.gmo
+#en.gmo should not be installed anymore!!
+CATALOGS = de.gmo da.gmo fr.gmo ro.gmo cs.gmo es.gmo el.gmo ja.gmo it.gmo sv.gmo pt_BR.gmo hu.gmo pl.gmo nl.gmo no.gmo
 
 %.gmo : %.po
 	$(MSGFMT) $< -o $@
