update from  "Gary G Palmer, Jr" <Gary.Palmer-3@ksc.nasa.gov>
git-svn-id: svn://svn.code.sf.net/p/bluefish/code/trunk@320 7640d186-872a-4c71-b7b2-a5696852cc35

--- a/bluefish/data/highlighting.in
+++ b/bluefish/data/highlighting.in
@@ -1,4 +1,4 @@
-cfml:cfml:1:<((/)?(cf)):>:1::#AC0C0C::0:0:
+cfml:cfml:1:<((/)?cf):>:1::#AC0C0C::0:0:
 cfml:cfml-attrib:1:("[^"]*")::2:^cfml$:#4399D7::0:0:
 cfml:html:1:<((/)?[a-z0-9]+):>:1::#0000EE::0:0:
 cfml:html-tag:1:1::3:^html$:#000077::2:0:
