install bluefish in the gnome1 and gnome2 menu set the VERSION to pre0.9
git-svn-id: svn://svn.code.sf.net/p/bluefish/code/trunk@339 7640d186-872a-4c71-b7b2-a5696852cc35

--- a/bluefish/configure.ac
+++ b/bluefish/configure.ac
@@ -22,7 +22,7 @@ AC_CONFIG_HEADER(src/config.h)
 
 
 PACKAGE=bluefish
-VERSION=gtk2-port
+VERSION=pre0.9
 AC_SUBST(PACKAGE)
 AC_SUBST(VERSION)
 AC_DEFINE_UNQUOTED(PACKAGE, "$PACKAGE")
