install bluefish in the gnome1 and gnome2 menu set the VERSION to pre0.9
git-svn-id: svn://svn.code.sf.net/p/bluefish/code/trunk/bluefish@339 7640d186-872a-4c71-b7b2-a5696852cc35

--- a/Makefile.in
+++ b/Makefile.in
@@ -68,7 +68,9 @@ install: src/bluefish
 	$(INSTALL_DIR) $(pkgdatadir)
 	$(INSTALL_DATA) images/bluefish_splash.png $(pkgdatadir)
 	@cd icons/ && $(MAKE) install
-	$(INSTALL_DATA) images/bluefish_splash.png $(pkgdatadir)
+	if [ -d /usr/share/pixmaps ]; then \
+		$(INSTALL_DATA) inline_images/bluefish_icon1.png /usr/share/pixmaps/bluefish-icon.png ;\
+	fi
 	@cd src/ && $(MAKE) install
 	@cd po/ && $(MAKE) install
 	@cd data/ && $(MAKE) install
