--- a/configure.ac
+++ b/configure.ac
@@ -22,7 +22,7 @@ AC_CONFIG_HEADER(src/config.h)
 
 
 PACKAGE=bluefish
-VERSION=gtk2-port
+VERSION=pre0.9
 AC_SUBST(PACKAGE)
 AC_SUBST(VERSION)
 AC_DEFINE_UNQUOTED(PACKAGE, "$PACKAGE")
