--- a/bluefish/data/bluefish.desktop.in
+++ b/bluefish/data/bluefish.desktop.in
@@ -2,7 +2,7 @@
 Name=Bluefish
 Comment=Web development editor
 Exec=bluefish
-Icon=bluefish-icon.png
+Icon=ICONDIR/bluefish-icon.png
 Terminal=false
 Type=Application
 Categories=Application;Office;
