bug in make install
git-svn-id: svn://svn.code.sf.net/p/bluefish/code/trunk@355 7640d186-872a-4c71-b7b2-a5696852cc35

--- a/bluefish/data/Makefile.in
+++ b/bluefish/data/Makefile.in
@@ -41,7 +41,7 @@ install: all
 		$(INSTALL_DATA) bluefish.desktop $(gnome2menupath) ;\
 	fi
 	if [ -d $(gnome1menupath) ] ; then \
-		$(INSTALL_DIR) $(gnome1menupath)/Applications
+		$(INSTALL_DIR) $(gnome1menupath)/Applications ;\
 		$(INSTALL_DATA) bluefish.desktop $(gnome1menupath)/Applications ;\
 	fi
 
