--- a/bluefish/debian/rules
+++ b/bluefish/debian/rules
@@ -2,9 +2,10 @@
 
 tmp:=$(shell pwd)/debian/tmp
 
-CFLAGS = -O2
-ifneq (,$(findstring debug,$(DEB_BUILD_OPTIONS)))
-CFLAGS += -g
+ifneq (,$(findstring noopt,$(DEB_BUILD_OPTIONS)))
+CFLAGS += -O0
+else
+CFLAGS += -O2
 endif
 ifeq (,$(findstring nostrip,$(DEB_BUILD_OPTIONS)))
 INSTALL_PROGRAM += -s
@@ -13,7 +14,6 @@ endif
 build: build-stamp
 build-stamp:
 	dh_testdir
-	autoconf
 	CFLAGS="$(CFLAGS)" ./configure \
 	            --prefix=/usr --sysconfdir=/etc --mandir=/usr/share/man \
 		    --with-internal-preview
@@ -23,9 +23,13 @@ build-stamp:
 clean:
 	dh_testdir
 	dh_testroot
+	-test -r /usr/share/misc/config.sub && \
+	  cp -f /usr/share/misc/config.sub $(CURDIR)/config.sub
+	-test -r /usr/share/misc/config.guess && \
+	  cp -f /usr/share/misc/config.guess $(CURDIR)/config.guess
 	[ ! -f Makefile ] || $(MAKE) distclean
 	rm -f build-stamp
-	rm -f configure po/*.gmo po/stamp-cat-id po/bluefish.pot po/cat-id-tbl.c data/Makefile
+	rm -f po/*.gmo po/stamp-cat-id po/bluefish.pot po/cat-id-tbl.c data/Makefile
 	rm -rf $(tmp)
 	dh_clean
 
@@ -35,7 +39,13 @@ binary-arch: build
 	dh_testdir
 	dh_testroot
 	$(MAKE) install prefix=$(tmp)/usr sysconfdir=$(tmp)/etc mandir=$(tmp)/usr/share/man pixmapsdir=$(tmp)/usr/share/pixmaps
+	install -d -o root -g root -m 755 $(tmp)/usr/share/pixmaps
+	install -o root -g root -m 644 debian/bluefish_icon1.xpm $(tmp)/usr/share/pixmaps/bluefish_icon.xpm
+	install -o root -g root -m 644 inline_images/bluefish_icon1.png $(tmp)/usr/share/pixmaps/bluefish-icon.png
+	install -d -o root -g root -m 755 $(tmp)/usr/share/applications
+	install -o root -g root -m 644 data/bluefish.desktop $(tmp)/usr/share/applications/
 	dh_installdocs
+	dh_installman
 	dh_installmenu
 	dh_installchangelogs
 ifeq "$(findstring nostrip,$(DEB_BUILD_OPTIONS))" ""	
