preparing for function reference merge
git-svn-id: svn://svn.code.sf.net/p/bluefish/code/trunk@375 7640d186-872a-4c71-b7b2-a5696852cc35

--- a/bluefish/inline_images/Makefile
+++ b/bluefish/inline_images/Makefile
@@ -27,6 +27,7 @@ TOOLBAR = \
 	dtd dtd.png \
 	email email.png \
 	embed embed.png \
+	filetree filetree.png \
 	font font.png \
 	font_base font_base.png \
 	fonth1 fonth1.png \
