added unindent and indent buttons in the toolbar, and fixed and improved the indent function in document.c
git-svn-id: svn://svn.code.sf.net/p/bluefish/code/trunk@384 7640d186-872a-4c71-b7b2-a5696852cc35

--- a/bluefish/inline_images/Makefile
+++ b/bluefish/inline_images/Makefile
@@ -63,6 +63,7 @@ TOOLBAR = \
 	hrule hrule.png \
 	image image.png \
 	image_map image_map.png \
+	indent indent.png \
 	italic italic.png \
 	javascript_mouseover javascript_mouseover.png \
 	javascript_netscape javascript_netscape.png \
@@ -127,6 +128,7 @@ TOOLBAR = \
 	thumbnail thumbnail.png \
 	underline underline.png \
 	undo undo.png \
+	unindent unindent.png \
 	var var.png \
 	view_in_browser view_in_browser.png \
 	wml_a wml_a.png \
